guess mode fixes + alignment issues

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ article > section {
 }
 
 .top-table {
-    width: 20%;
+    width: 100%;
     padding: 0;
     margin-left: auto;
     margin-right: auto;
@@ -156,7 +156,7 @@ article > section {
     left: 0;
     width: 100%;
     height: 100%;
-}   
+}
 
 #output-links{
     position: relative;
@@ -377,7 +377,7 @@ article > section {
 }
 
 .draggable{
-    
+
 }
 .button {
     width: 80%;
@@ -396,7 +396,7 @@ article > section {
     width: 0%;
     visibility: hidden;
 }
-    /* edit buttons container to hold and position + and - buttons */
+/* edit buttons container to hold and position + and - buttons */
 .row-buttons-container{
     height: 8vh;
     width: 2vw;
@@ -553,6 +553,30 @@ span {
 }
 
 #popup.active {
+    visibility: visible;
+    opacity: 1;
+    transition: 0.5s;
+}
+
+#guess-popup {
+    text-align: center;
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    height: 400px;
+    padding: 50px;
+    box-shadow: 0 5px 30px rgba(0, 0, 0, .3);
+    background: #fff;
+    z-index : 10;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+    font-size: 50px;
+}
+
+#guess-popup.active {
     visibility: visible;
     opacity: 1;
     transition: 0.5s;
@@ -911,7 +935,6 @@ select option:checked {
 #guess-output-table {
     width: 600px;
 }
-
 span.guess-comment {
     line-height: 1em;
 }
